--- a/css/JogoDaVelha.css
+++ b/css/JogoDaVelha.css
@@ -51,3 +51,16 @@ h4{
 #p8{
     border-right: 5px solid #fff;
 }
+#placarx{
+    font-weight: bold;
+    color: #fff;
+    font-size: 20px;
+}
+#placaro{
+    font-weight: bold;
+    color: #fff;   
+    font-size: 20px;
+}
+#VezDe{
+    color: #fff;
+}
